[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/LaserFocus.gd" type="Script" id=1]
[ext_resource path="res://art/laser_focus-red.png" type="Texture" id=2]
[ext_resource path="res://art/explosion-small.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "TimedExplosionAnimation"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("TelegraphSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 0, 1, 2, 3, 4 ]
}

[node name="ExplosionArea" type="Area2D"]
script = ExtResource( 1 )

[node name="TelegraphSprite" type="Sprite" parent="."]
position = Vector2( 0, 10 )
z_index = -1
texture = ExtResource( 2 )
hframes = 9

[node name="ExplosionSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 5
frame = 4
region_enabled = true
region_rect = Rect2( 0, 0, 160, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/TimedExplosionAnimation = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_ExplosionArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
